# sovereign-stack

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE.md  IMPLEMENTATION_NOTES.md  LICENSE.md  NON_GOALS.md  README.md  STATUS.md  install-sovereign-cell.sh
.github/: LICENSE-FAQ.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  hardware_design.yml
docs/: INTEGRATION.md  PHONE-QUICKSTART.md  QUICKSTART.md  README.md  STOPPING_POINTS.md  TUTORIAL.md
docs/00_Foundation/: README.md
docs/01_Core_Architecture/: README.md
docs/02_System_Protocols/: README.md
docs/03_Living_Meshes/: README.md
docs/04_Implementation/: README.md
hardware/: README.md
hardware/autonomous-node/: README.md
hardware/autonomous-node/dome-01/: specifications.md
hardware/habcal/: README.md
hardware/mldt/: SPECIFICATION.md
protocols/: README.md
src/: README.md
src/ai/ghost/: .gitignore  LICENSE  README.md  ghostadapt.sh  ghostbrain.sh  ghostdeed.sh  ghostdream.sh  ghostllm.sh  ghostmemory.sh  ghostreflect.sh  ghoststate.sh  requirements.txt  setup.py
src/ai/thermo-ai/: .gitignore  ARCHITECTURE.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MINIMAL_CONDITIONS.md  PROJECT_SUMMARY.md  README.md  REFERENCES.md  THEORY.md  quickstart.py  (+1 more)
src/energy/: __init__.py  coupler.py  ghostbrain.py  integrity_chain.py  modbus_maps.py
src/ghoststack/: __init__.py
src/mesh/shadow-net/bridge/: DeedMeshBridge.py  cli.py  config.yaml  demo.py  pyproject.toml  requirements.txt
(+171 files in other folders)
